--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
 
 <body>
 	<div class=input-area>
-		<input placeholder="TODOを入力">
+		<input id="add-text" placeholder="TODOを入力">
 		<button id="add-button">追加</button>
 	</div>
 	<div class="incomplete-area">
 		<p class="title">未完了のTODO</p>
-		<ul>
-			<li>
+		<ul id="incomplete-list">
+			<!-- <li>
 				<div class="list-row">
-					<p class="list-innter">TODOっです</p>
+					<p class="list-inner">TODOっです</p>
 					<button>完了</button>
 					<button>削除</button>
 				</div>
 			</li>
 			<li>
 				<div class="list-row">
-					<p class="list-innter">TODOっです</p>
+					<p class="list-inner">TODOっです</p>
 					<button>完了</button>
 					<button>削除</button>
 				</div>
-			</li>
+			</li> -->
 		</ul>
 	</div>
 	<div class="complete-area"> 
 		<p class="title">完了したTODO</p>
-		<ul>
+		<ul id="completed-list">
 			<li>
 				<div class="list-row">
-					<p class="list-innter">TODOでした</p>
+					<p class="list-inner">TODOでした</p>
 					<button>戻す</button>
 				</div>
 			</li>
